--- a/style.css
+++ b/style.css
@@ -36,8 +36,10 @@ img{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 3rem;
-    margin-top: 5rem;
+    gap: 2rem;                       /* gap: 3rem;   */
+    /* margin-top: 5rem; */
+    flex-wrap: nowrap; /* ensure horizontal */
+    overflow-x: auto;  /* allow horizontal scroll on tiny screens */
 }
 
 .score-board{
@@ -77,8 +79,10 @@ img{
     }
 
     img {
-        height: 90px;
-        width: 90px;
+        /* height: 90px;
+        width: 90px; */
+        width: 80px;
+        height: auto;
     }
 
     #msg {
