responsive UI fix

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ img{
     justify-content: center;
     align-items: center;
     gap: 2rem;                       /* gap: 3rem;   */
-    /* margin-top: 5rem; */
+    margin-top: 5rem;
     flex-wrap: nowrap; /* ensure horizontal */
     overflow-x: auto;  /* allow horizontal scroll on tiny screens */
 }
