responsive UI fix

--- a/style.css
+++ b/style.css
@@ -36,10 +36,9 @@ img{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 2rem;                       /* gap: 3rem;   */
+     gap: 3rem;   
     margin-top: 5rem;
-    flex-wrap: nowrap; /* ensure horizontal */
-    overflow-x: auto;  /* allow horizontal scroll on tiny screens */
+    
 }
 
 .score-board{
@@ -79,10 +78,8 @@ img{
     }
 
     img {
-        /* height: 90px;
-        width: 90px; */
-        width: 80px;
-        height: auto;
+        height: 90px;
+        width: 90px;
     }
 
     #msg {
